--- a/src/app/shapes/shapes.component.html
+++ b/src/app/shapes/shapes.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <div id="frame">
-      <div id="frameRow">
+      <div class="row p-3" id="frameRow">
         <button class="noBtnStyle" id="square"></button>
         <button class="noBtnStyle" id="squareRadius"></button>
         <button class="noBtnStyle" id="rectangle"></button>
@@ -53,6 +53,11 @@
         <button class="noBtnStyle">
           <div id="starsixRadius"></div>
         </button>
+        <button class="noBtnStyle" id="heart"></button>
+        <button class="noBtnStyle ml-4" id="egg"></button>
+        <button class="noBtnStyle ml-4 mt-2" id="talkbubble"></button>
+        <button class="noBtnStyle ml-5" id="cross"></button>
+        <button class="noBtnStyle ml-5" id="base"></button>
       </div>
     </div>
   </div>
