--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -63,7 +63,7 @@
         <mat-card-actions>
           <button class="signin-btn">Sign in</button>
           <div class="mt-3">
-            <button class="signin-with"><img src="../../assets/imgs/logo-orange.png" width="15px"/>&nbsp;Sign in with Amonak</button>
+            <button class="signin-with"><img src="../../assets/imgs/logoB.png" width="15px"/>&nbsp;Sign in with Amonak</button>
             <button class="signin-with ml-2"><img src="../../assets/imgs/fb.png" width="15px"/>&nbsp;Sign in with Facebook</button>
             <button class="signin-with ml-2"><img src="../../assets/imgs/google.png" width="15px"/>&nbsp;Sign in with Google</button>
           </div>
