--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -116,25 +116,6 @@ color:#2c3e50;
 }
 
 
-.add-text-input{
-height:auto;
-min-height:40px;
-max-height:300px;
-background:none;
-position:absolute;
-width:auto;
-min-width:400px;
-border-top:none;
-border-left:none;
-border-right:none;
-border-bottom:2px solid black;
-outline:none;
-margin-top:-350px;
-margin-left:100px;
-font-family: 'Roboto', cursive;
-font-size:15px;
-}
-
 .fontSelect{
 width:200px;
 background:none !important;
@@ -217,10 +198,42 @@ background:#222831;
 color:white;
 }
 
+
 .colorBtn{
 border:none;
 background:none;
 width:auto;
 height:auto;
 }
+
+.box{
+position:absolute;
+right:40px;
+top:280px;
+}
+
+.display-none{
+display:none;
+}
+
+
+.noBtnStyleG{
+border:none;
+padding:0px;
+outline:none;
+margin:5px;
+background:none;
+font-size:35px;
+color:#22a6b3 !important;
+position:absolute;
+top:200px;
+left:450px;
+}
+
+input[type="file"]{
+position:absolute;
+margin-top:25px;
+opacity:0;
+}
+
 
