--- a/src/app/image-dropper/image-dropper.component.css
+++ b/src/app/image-dropper/image-dropper.component.css
@@ -1,11 +1,20 @@
-.img-container{
-float:left;
+.cropping{
+width:100px;
+height:100px;
+position:absolute;
+right:-295px !important;
+margin-top:50vh !important;
+z-index:3;
 }
 
-.img-preview{
-width:200px;
-height:200px;
-float:left;
+.cropped{
+max-height:62vh;
+position:absolute;
+}
+
+.cropped:hover{
+cursor: -webkit-grab;
+cursor: grab;
 }
 
 .paper{
