--- a/src/app/white-paper/white-paper.component.css
+++ b/src/app/white-paper/white-paper.component.css
@@ -1,9 +1,81 @@
 .paper{
 border-radius:0px;
-width:550px;
-height:60vh;
+width:650px;
+height:62vh;
+margin-left:5px;
 }
 
 .paper-col{
 height:70vh;
+}
+
+.add-text-input{
+height:auto;
+min-height:40px;
+max-height:300px;
+background:none;
+position:absolute;
+width:auto;
+min-width:400px;
+max-width:650px;
+border-top:none;
+border-left:none;
+border-right:none;
+border-bottom:2px solid black;
+outline:none;
+margin-top:150px;
+font-family: 'Roboto', cursive;
+font-size:15px;
+overflow-wrap:break-text;
+}
+
+.drawing{
+position:absolute;
+}
+
+.eraser{
+position:absolute;
+}
+
+#cropperId{
+width:100%;
+height:62vh;
+margin:0;
+position:absolute;
+z-index:1;
+}
+
+#drawerId{
+width:100%;
+height:62vh;
+margin:0;
+position:absolute;
+z-index:1;
+}
+
+#writerId{
+width:100%;
+height:62vh;
+margin:0;
+position:absolute;
+z-index:100;
+}
+
+#eraserId{
+width:100%;
+height:62vh;
+margin:0;
+position:absolute;
+z-index:1;
+}
+
+.resize-img{
+height:auto;
+width:auto;
+}
+
+
+#sBuy{
+position:absolute;
+z-index:100;
 }
