--- a/src/app/stickers/stickers.component.css
+++ b/src/app/stickers/stickers.component.css
@@ -58,3 +58,69 @@ margin-left:-400px;
 cursor: -webkit-grab;
 cursor: grab;
 }
+
+#stick1{
+  display:none;
+}
+
+#stick2{
+  display:none;
+}
+#stick3{
+  display:none;
+}
+#stick4{
+  display:none;
+}
+#stick5{
+  display:none;
+}
+
+#stick6{
+  display:none;
+}
+
+#stick7{
+  display:none;
+}
+#stick8{
+  display:none;
+}
+#stick9{
+  display:none;
+}
+#stick10{
+  display:none;
+}
+#stick11{
+  display:none;
+}
+
+#stick12{
+  display:none;
+}
+#stick13{
+  display:none;
+}
+#stick14{
+  display:none;
+}
+#stick15{
+  display:none;
+}
+#stick16{
+  display:none;
+}
+#stick17{
+  display:none;
+}
+
+#stick18{
+  display:none;
+}
+#stick19{
+  display:none;
+}
+#stick20{
+  display:none;
+}
