--- a/src/app/nav-right/nav-right.component.html
+++ b/src/app/nav-right/nav-right.component.html
@@ -47,8 +47,8 @@
     </button>
   </div>
   <div class="row mt-2">
-<!--    <app-shapes></app-shapes>-->
-    <app-stickers></app-stickers>
-<!--    <app-icons></app-icons>-->
+    <app-shapes id="shapes"></app-shapes>
+    <app-stickers id="stickers"></app-stickers>
+    <app-icons id="icons"></app-icons>
   </div>
 </div>
