--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -2,7 +2,7 @@
   <header>
     <nav class="navbar nvbr">
       <a class="navbar-brand d-flex justify-items-center ml-5" href="" routerLink="/login">
-        <img src="../../assets/imgs/logo-orange.png" width="65px" height="auto" class="nav-brand d-inline-block align-top align-start" alt="">
+        <img src="../../assets/imgs/logo-blue.png" width="50px" height="auto" class="nav-brand d-inline-block align-top align-start" alt="">
       </a>
 
       <div class="row">
@@ -23,13 +23,16 @@
 
   <div class="row m-5 pl-4 header-row">
     <div class="col-7 mt-4">
-      <font class="big-text">Imagine, Create, Impact.</font>
-      <div style="width:70%">
-        <font size="3" color="silver">let your imagination take shape in one touch. Amtouch is a free and intuitive image processing application for everyone.</font>
-      </div>
-      <div class="presentation-div mt-4">
-        <div class="presentation-img"></div>
-      </div>
+      <mat-card class="first-card">
+        <div class="row"><font class="big-text">Imagine, Create, Impact.</font></div>
+        <div class="row">
+          <font size="3" color="silver">let your imagination take shape in one touch. Amtouch is a free and intuitive image processing application for everyone.</font>
+        </div>
+        <mat-card-content class="presentation-img mt-3">
+          <img src="../../assets/imgs/accueilS.png" width="400px">
+        </mat-card-content>
+      </mat-card>
+
     </div>
     <div class="col-5">
       <mat-card class="mat-card-form pb-4">
