--- a/src/app/white-paper/white-paper.component.html
+++ b/src/app/white-paper/white-paper.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 paper-col d-flex justify-content-center align-items-center">
       <mat-card class="paper p-0 bg-white">
         <mat-card-content id="cropperId">
-          <app-image-dropper src="../../assets/imgs/djidji.jpg"></app-image-dropper>
+          <app-image-dropper src="../../assets/imgs/car.png"></app-image-dropper>
         </mat-card-content>
         <mat-card-content class="add-text-div d-flex justify-content-center" id="writerId">
           <div ngDraggable contenteditable type="text" class="add-text-input" id="addTextId" (click)="editTextAgain()" (focusout)="validAddText()">Add text...</div>
