--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -95,9 +95,9 @@
       </div>
       <div class="row body-card">
         <div class="col-2 left-nav p-0">
-          <input type="file" id="image" name="multi-files" accept="image/*"/>
+            <input type="file" id="image" name="multi-files" multiple (change)="onFileChanged($event)" accept="image/*"/>
           <label class="imageLabel d-flex justify-content-center align-items-center" for="image">
-            <button class="add-file mt-4 ml-4"><img src=".././assets/imgs/icons/add-white.png" width="18px" height="auto">&nbsp;&nbsp;New</button>
+            <button class="add-file mt-4 ml-4"><img src=" {{output}}" width="18px" height="auto">&nbsp;&nbsp;New</button>
           </label>
           <button class="action-btn mt-4 text-left"><i class="fas fa-magic"></i><font class="text-btn-left">Magic wand</font></button>
           <button class="action-btn mt-2 text-left"><i class="fas fa-arrows-alt"></i><font class="text-btn-left">Move</font></button>
