--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -152,7 +152,7 @@
 <!--              ></div>-->
 <!--            </div>-->
             <div class="col-8">
-              <app-white-paper></app-white-paper>
+              <app-white-paper src="{{output}}"></app-white-paper>
               <div class="row">
                 <div class="col-12" style="padding-left:25px;">
                   <button class="filters-btn"><i class="fas fa-tint"></i>&nbsp;&nbsp;Contrast</button>
