--- a/src/app/white-paper/white-paper.component.html
+++ b/src/app/white-paper/white-paper.component.html
@@ -4,9 +4,9 @@
       <mat-card class="paper p-0 bg-white">
         <mat-card-content id="cropperId">
 
-          <app-image-dropper src="../../assets/imgs/car.png"></app-image-dropper>
+          <app-image-dropper src="{{img}}"></app-image-dropper>
 
-          <app-image-dropper src="../../assets/imgs/prod3.jpg"></app-image-dropper>
+        
 
         </mat-card-content>
         <mat-card-content class="add-text-div d-flex justify-content-center" id="writerId">
