--- a/src/app/icons/icons.component.html
+++ b/src/app/icons/icons.component.html
@@ -2,38 +2,39 @@
   <div class="row">
     <font class="title">Icons</font>
   </div>
+
   <div class="row">
     <div id="frame">
       <div id="frameRow">
-        <button id="sfmw" class="noBtnStyle" ><i class="fas fa-smile-wink"></i></button>
-        <button id="rfmw" class="noBtnStyle" ><i class="far fa-smile-wink"></i></button>
-        <button id="rfs" class="noBtnStyle" ><i class="far fa-surprise"></i></button>
-        <button id="sfs" class="noBtnStyle" ><i class="fas fa-surprise"></i></button>
-        <button id="sfmb" class="noBtnStyle" ><i class="fas fa-smile-beam"></i></button>
-        <button id="rfmb" class="noBtnStyle" ><i class="far fa-smile-beam"></i></button>
-        <button id="rfgs" class="noBtnStyle" ><i class="far fa-grin-stars"></i></button>
-        <button id="sfgs" class="noBtnStyle" ><i class="fas fa-grin-stars"></i></button>
-        <button id="rfgw" class="noBtnStyle" ><i class="far fa-grin-wink"></i></button>
-        <button id="sfgw" class="noBtnStyle" ><i class="fas fa-grin-wink"></i></button>
-        <button id="sfgst" class="noBtnStyle" ><i class="fas fa-grin-squint-tears"></i></button>
-        <button id="rfgst" class="noBtnStyle" ><i class="far fa-grin-squint"></i></button>
-        <button id="rfls" class="noBtnStyle" ><i class="far fa-laugh-beam"></i></button>
-        <button id="sfgh" class="noBtnStyle" ><i class="fas fa-grin-hearts"></i></button>
-        <button id="rfkwh" class="noBtnStyle" ><i class="far fa-kiss-wink-heart"></i></button>
-        <button id="rfgt" class="noBtnStyle" ><i class="far fa-grin-tears"></i></button>
-        <button id="sfut" class="noBtnStyle" ><i class="fas fa-user-tie"></i></button>
-        <button id="sfu" class="noBtnStyle" ><i class="fas fa-users"></i></button>
-        <button id="sfug" class="noBtnStyle" ><i class="fas fa-user-graduate"></i></button>
-        <button id="rfb" class="noBtnStyle" ><i class="far fa-bookmark"></i></button>
-        <button id="sfb" class="noBtnStyle" ><i class="fas fa-bookmark"></i></button>
-        <button id="sfsc" class="noBtnStyle" ><i class="fas fa-shopping-cart"></i></button>
-        <button id="sfcc" class="noBtnStyle" ><i class="far fa-credit-card"></i></button>
-        <button id="sfds" class="noBtnStyle" ><i class="fas fa-dollar-sign"></i></button>
-        <button id="sfc" class="noBtnStyle" ><i class="fas fa-comments"></i></button>
-        <button  id="rfc" class="noBtnStyle" ><i class="far fa-comments"></i></button>
-        <button id="sfca" class="noBtnStyle" ><i class="fas fa-comment-alt"></i></button>
-        <button id="rfca" class="noBtnStyle" ><i class="far fa-comment-alt"></i></button>
-        <button id="sfpa" class="noBtnStyle" ><i class="fas fa-phone-alt"></i></button>
+        <button (click)="showIco1()" class="noBtnStyle" ><i class="fas fa-smile-wink"></i></button>
+        <button (click)="showIco2()" class="noBtnStyle" ><i class="far fa-smile-wink"></i></button>
+        <button (click)="showIco3()" class="noBtnStyle" ><i class="far fa-surprise"></i></button>
+        <button (click)="showIco4()" class="noBtnStyle" ><i class="fas fa-surprise"></i></button>
+        <button (click)="showIco5()" class="noBtnStyle" ><i class="fas fa-smile-beam"></i></button>
+        <button (click)="showIco6()" class="noBtnStyle" ><i class="far fa-smile-beam"></i></button>
+        <button (click)="showIco7()" class="noBtnStyle" ><i class="far fa-grin-stars"></i></button>
+        <button (click)="showIco8()" class="noBtnStyle" ><i class="fas fa-grin-stars"></i></button>
+        <button (click)="showIco9()" class="noBtnStyle" ><i class="far fa-grin-wink"></i></button>
+        <button (click)="showIco10()" class="noBtnStyle" ><i class="fas fa-grin-wink"></i></button>
+        <button (click)="showIco11()" class="noBtnStyle" ><i class="fas fa-grin-squint-tears"></i></button>
+        <button (click)="showIco12()" class="noBtnStyle" ><i class="far fa-grin-squint"></i></button>
+        <button (click)="showIco13()" class="noBtnStyle" ><i class="far fa-laugh-beam"></i></button>
+        <button (click)="showIco14()" class="noBtnStyle" ><i class="fas fa-grin-hearts"></i></button>
+        <button (click)="showIco15()" class="noBtnStyle" ><i class="far fa-kiss-wink-heart"></i></button>
+        <button (click)="showIco16()" class="noBtnStyle" ><i class="far fa-grin-tears"></i></button>
+        <button (click)="showIco17()" class="noBtnStyle" ><i class="fas fa-user-tie"></i></button>
+        <button (click)="showIco18()" class="noBtnStyle" ><i class="fas fa-users"></i></button>
+        <button (click)="showIco19()" class="noBtnStyle" ><i class="fas fa-user-graduate"></i></button>
+        <button (click)="showIco20()" class="noBtnStyle" ><i class="far fa-bookmark"></i></button>
+        <button (click)="showIco21()" class="noBtnStyle" ><i class="fas fa-bookmark"></i></button>
+        <button (click)="showIco22()" class="noBtnStyle" ><i class="fas fa-shopping-cart"></i></button>
+        <button (click)="showIco23()" class="noBtnStyle" ><i class="far fa-credit-card"></i></button>
+        <button (click)="showIco24()" class="noBtnStyle" ><i class="fas fa-dollar-sign"></i></button>
+        <button (click)="showIco25()" class="noBtnStyle" ><i class="fas fa-comments"></i></button>
+        <button (click)="showIco26()" class="noBtnStyle" ><i class="far fa-comments"></i></button>
+        <button (click)="showIco27()" class="noBtnStyle" ><i class="fas fa-comment-alt"></i></button>
+        <button (click)="showIco28()" class="noBtnStyle" ><i class="far fa-comment-alt"></i></button>
+        <button (click)="showIco29()" class="noBtnStyle" ><i class="fas fa-phone-alt"></i></button>
       </div>
     </div>
   </div>
